<resources>
    <string name="app_name">Foody</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favourite">Favourite</string>
    <string name="food_joke">Food Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="restaurant_image_description_in_floating_action_button">restaurant image description in floating action button</string>
    <string name="emoji_sad_image_description">emoji sad image description</string>
    <string name="vegan">Vegan</string>
    <string name="description">Description</string>
    <string name="clock_image_description">clock image description</string>
    <string name="heart_image_description">heart image description</string>
    <string name="food_recipe_image_description">food recipe image description</string>
    <string name="leaf_image_description">leaf image description</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="diet_type">Diet Type</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_food_map">Low FOOD MAP</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="main_image_view_description">main image view description</string>
    <string name="_45">45</string>
    <string name="time_image_description">time image description</string>
    <string name="likes_image_description">likes image description</string>
    <string name="title">Title</string>
    <string name="vegetarian_check">vegetarian_check</string>
    <string name="diary_free">Diary Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="summary">Summary</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="_1_teaspoon">1 Teaspoon</string>
    <string name="solid">Solid</string>
    <string name="ingredient_image_description">ingredient image description</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <string name="grams">Grams</string>
    <string name="_100">100</string>
    <string name="save_to_favourites">save to favourites</string>
    <string name="no_favourite_recipe">No Favourite Recipe</string>
    <string name="no_data_image_description">no data image description</string>
    <string name="delete_favourite_menu">delete favourite menu</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="joke_error_image_description">joke error image description</string>
    <string name="error">Error</string>
    <string name="share_food_joke">Share Food Joke</string>
    <string name="share_menu">Share</string>
    <string name="rate_menu">Rate</string>
    <string name="review_menu">Review</string>
    <string name="our_apps_menu">Our Apps</string>
    <string name="about_menu">About</string>
    <string name="navigation_drawer_icon_description">navigation drawer icon description</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="foody">Foody</string>
    <string name="version_1_0_0">Version 1:0:0</string>
    <string name="developed_by_seif_eldin_mohamed">Developed by: Seif Eldin Mohamed</string>
</resources>