<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.seif.foody.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.fragments.recipes.RecipeFragment">

        <ImageView
            android:id="@+id/error_img"
            readApiResponse="@{mainViewModel.recipesResponse}"
            readDatabase="@{mainViewModel.readRecipes}"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:alpha="0.5"
            android:contentDescription="@string/emoji_sad_image_description"
            android:src="@drawable/ic_sad"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/txt_error"
            readApiResponse="@{mainViewModel.recipesResponse}"
            readDatabase="@{mainViewModel.readRecipes}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:alpha="0.5"
            android:text="@string/no_internet_connection"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/itemColor"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/error_img"
            app:layout_constraintStart_toStartOf="@+id/error_img"
            app:layout_constraintTop_toBottomOf="@+id/error_img" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recipes_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:clickable="true"
            android:contentDescription="@string/restaurant_image_description_in_floating_action_button"
            android:focusable="true"
            app:backgroundTint="@color/floating_btn_background"
            android:src="@drawable/ic_restaurant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,RedundantDescriptionCheck">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>